--- a/charts/oss-eso/secretstore.yaml
+++ b/charts/oss-eso/secretstore.yaml
@@ -12,6 +12,6 @@ spec:
           accessToken:
             name: gitlab-secret
             key: token
-      projectID: 70159429
-      groupIDs: 79819160
+      projectID: "70159429"
+      groupIDs: "79819160"
       inheritFromGroups: true
