--- a/charts/oss-eso/secretstore.yaml
+++ b/charts/oss-eso/secretstore.yaml
@@ -13,5 +13,5 @@ spec:
             name: gitlab-secret
             key: token
       projectID: "70159429"
-      groupIDs: "79819160"
+      groupIDs: ["79819160"]
       inheritFromGroups: true
