--- a/charts/oss-cert-manager/externalsecret.yaml
+++ b/charts/oss-cert-manager/externalsecret.yaml
@@ -1,7 +1,8 @@
 apiVersion: external-secrets.io/v1
 kind: ExternalSecret
 metadata:
-  name: gitlab-external-secret-example
+  name: cloudflare-api-token-external-secret
+  namespace: cert-manager
 spec:
   refreshInterval: 1h
 
