--- a/charts/oss-eso/secretstore.yaml
+++ b/charts/oss-eso/secretstore.yaml
@@ -1,5 +1,5 @@
 apiVersion: external-secrets.io/v1
-kind: SecretStore
+kind: ClusterSecretStore
 metadata:
   name: gitlab-secret-store
 spec:
@@ -10,6 +10,7 @@ spec:
       auth:
         SecretRef:
           accessToken:
+            namespace: external-secrets
             name: gitlab-secret
             key: token
       projectID: "70159864"
