--- a/charts/oss-cert-manager/externalsecret.yaml
+++ b/charts/oss-cert-manager/externalsecret.yaml
@@ -7,11 +7,12 @@ spec:
   refreshInterval: 1h
 
   secretStoreRef:
-    kind: SecretStore
+    kind: ClusterSecretStore
     name: gitlab-secret-store
 
   target:
     name: cloudflare-api-token-secret
+    namespace: cert-manager
     creationPolicy: Owner
 
   data:
