--- a/charts/oss-argocd/externalsecret.yaml
+++ b/charts/oss-argocd/externalsecret.yaml
@@ -1,8 +1,8 @@
 apiVersion: external-secrets.io/v1
 kind: ExternalSecret
 metadata:
-  name: cloudflare-api-token-external-secret
-  namespace: argocd
+  name: github-oauth-external-secret
+  namespace: argo-project
 spec:
   refreshInterval: 1h
 
