--- a/charts/oss-argocd/values.yaml
+++ b/charts/oss-argocd/values.yaml
@@ -21,3 +21,7 @@ server:
   ingress:
     enabled: true
     ingressClassName: nginx
+    annotations:
+      cert-manager.io/cluster-issuer: tls-issuer
+      nginx.ingress.kubernetes.io/ssl-redirect: "false"
+      nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
