--- a/charts/oss-argocd/externalsecret.yaml
+++ b/charts/oss-argocd/externalsecret.yaml
@@ -13,6 +13,10 @@ spec:
   target:
     name: github-oauth-secret
     creationPolicy: Owner
+    template:
+      metadata:
+        labels:
+          app.kubernetes.io/part-of: argocd
 
   data:
     - secretKey: clientId
