--- a/charts/oss-argocd/values.yaml
+++ b/charts/oss-argocd/values.yaml
@@ -19,4 +19,10 @@ configs:
 
 server:
   ingress:
-    enabled: false
+    enabled: true
+    ingressClassName: nginx
+    annotations:
+      cert-manager.io/cluster-issuer: tls-issuer
+      nginx.ingress.kubernetes.io/ssl-redirect: "false"
+      nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
+    tls: true
