--- a/charts/oss-argocd/values.yaml
+++ b/charts/oss-argocd/values.yaml
@@ -5,7 +5,7 @@ configs:
   params:
     server.insecure: true
   cm:
-    url: https://v2.argocd.haulrest.me
+    url: https://v2.argocd.haulrest.me:9443
     dex.config: |
       connectors:
       - type: github
