--- a/charts/oss-argocd/values.yaml
+++ b/charts/oss-argocd/values.yaml
@@ -16,7 +16,8 @@ configs:
           clientSecret: $github-oauth-secret:clientSecret
           orgs:
             - name: BeaverHouse
-
+    policy.csv: |
+      g, admin, role:admin
 server:
   ingress:
     enabled: true
