--- a/charts/oss-argocd/values.yaml
+++ b/charts/oss-argocd/values.yaml
@@ -17,6 +17,11 @@ configs:
           orgs:
             - name: BeaverHouse
     policy.csv: |
+      p, role:admin, applications, *, */*, allow
+      p, role:admin, applicationsets, *, */*, allow
+      p, role:admin, clusters, *, *, allow
+      p, role:admin, repositories, *, *, allow
+      p, role:admin, projects, *, *, allow
       g, org:Owner, role:admin
 
 server:
