--- a/charts/oss-argocd/values.yaml
+++ b/charts/oss-argocd/values.yaml
@@ -14,6 +14,7 @@ configs:
         config:
           clientID: $github-oauth-secret:clientId
           clientSecret: $github-oauth-secret:clientSecret
+          loadAllGroups: true
           orgs:
             - name: BeaverHouse
     policy.csv: |
@@ -22,7 +23,7 @@ configs:
       p, role:admin, clusters, *, *, allow
       p, role:admin, repositories, *, *, allow
       p, role:admin, projects, *, *, allow
-      g, org:Owner, role:admin
+      g, BeaverHouse:Owner, role:admin
 
 server:
   ingress:
