--- a/charts/oss-argocd/values.yaml
+++ b/charts/oss-argocd/values.yaml
@@ -17,12 +17,8 @@ configs:
           loadAllGroups: true
           orgs:
             - name: BeaverHouse
+  rbac:
     policy.csv: |
-      p, role:admin, applications, *, */*, allow
-      p, role:admin, applicationsets, *, */*, allow
-      p, role:admin, clusters, *, *, allow
-      p, role:admin, repositories, *, *, allow
-      p, role:admin, projects, *, *, allow
       g, BeaverHouse:Owner, role:admin
 
 server:
