--- a/charts/oss-argocd/clusterexternalsecret-ghcr.yaml
+++ b/charts/oss-argocd/clusterexternalsecret-ghcr.yaml
@@ -26,7 +26,7 @@ spec:
 
         data:
           .dockerconfigjson: |
-            {"auths":{"ghcr.io":{"auth":"${{ data.GHCR_IO_AUTH_STRING }}"}}}
+            {"auths":{"ghcr.io":{"auth":"${{ .data.GHCR_IO_AUTH_STRING }}"}}}
 
     data:
       - secretKey: GHCR_IO_AUTH_STRING
