--- a/charts/oss-argocd/clusterexternalsecret-ghcr.yaml
+++ b/charts/oss-argocd/clusterexternalsecret-ghcr.yaml
@@ -25,8 +25,7 @@ spec:
         type: kubernetes.io/dockerconfigjson
 
         data:
-          .dockerconfigjson: |
-            {"auths":{"ghcr.io":{"auth":"${{ .GHCR_IO_AUTH_STRING }}"}}}
+          .dockerconfigjson: '{"auths":{"ghcr.io":{"auth":"${{ .GHCR_IO_AUTH_STRING }}"}}}'
 
     data:
       - secretKey: GHCR_IO_AUTH_STRING
