--- a/charts/oss-argocd/clusterexternalsecret-ghcr.yaml
+++ b/charts/oss-argocd/clusterexternalsecret-ghcr.yaml
@@ -23,11 +23,10 @@ spec:
       creationPolicy: Owner
       template:
         type: kubernetes.io/dockerconfigjson
-
         data:
-          .dockerconfigjson: '{"auths":{"ghcr.io":{"auth":"${{ .GHCR_IO_AUTH_STRING }}"}}}'
+          .dockerconfigjson: "{{ .GHCR_IO_AUTH_JSON | toString }}"
 
     data:
-      - secretKey: GHCR_IO_AUTH_STRING
+      - secretKey: GHCR_IO_AUTH_JSON
         remoteRef:
-          key: GHCR_IO_AUTH_STRING
+          key: GHCR_IO_AUTH_JSON
